@@ -1,5 +1,7 @@
 === HEAD
 
+* Make the touch plugin also touch associations on create in addition to update and delete (jeremyevans)
+
 * Add :allow_manual_update timestamps plugin option for not overriding a manually set update timestamp (jeremyevans)
 
 * Add Sequel.[] as an alias to Sequel.expr, for easier expression creation (jeremyevans)
